...
                        <Stack.Screen name="onboarding/create-wallet" options={{ headerShown: false }} />
                        <Stack.Screen name="selftest" options={{ title: 'Self Test' }} />
                        <Stack.Screen name="SendArk" options={{ title: 'Send ARK' }} />
                        <Stack.Screen name="Onramp" options={{ headerShown: true }} />
                        <Stack.Screen name="AskPassword" options={{ presentation: 'modal', headerShown: false }} />
                        <Stack.Screen name="AskMnemonic" options={{ presentation: 'modal', headerShown: false }} />
                        <Stack.Screen name="DAppBrowser" options={{ headerShown: true, title: 'Browser' }} />
                        <Stack.Screen
                          name="NetworkSelector"
                          options={{
                            presentation: 'transparentModal',
                            sheetAllowedDetents: [0.66, 1.0],
                            headerShown: false,
...
